Atualizando projeto para utilizar Ionic/PWA

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,5 @@
 
   <link rel="manifest" href="/manifest.json">
 </head>
-<body>
-  <h1>This should be your App Shell</h1>
-
-  <a href="http://github.com/lexcaraig/Angular-v5-SSR-PWA-template">
-    Fork me on Github
-    <i class="fa fa-github" aria-hidden="true"></i>
-  </a>
-  <pwa-template-root></pwa-template-root>
-</body>
+<app-root></app-root>
 </html>
