--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <title>O meu restaurante!</title>
