--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>O meu restaurante!</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/icons/favicon.ico">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
